# Course-Description-Automation

./: .gitattributes  .gitignore  .scalafmt.conf  Course-Description-Automation  Course-Description-Automation.bak.wxs  Course-Description-Automation.wxs  LICENSE  LICENSE.txt  Makefile  Notbuild.sbt.bak  PV-meeting01-03.03.23.md  README.md  build.sbt  build_package.sbt  cargo_build_copyhere  clean-res.ps1  clearClutt.ps1  componentAndDirectoryXml-res.xml  dev_symlink_dep_if_exist.sh  doc_user_todo.md  errwix.tosee.txt  final-directory-structure-once-packaged.md  get_paths.ps1  howto-copy.md  howto.md  launcher.sh  not-an-sbtfile.notsbt  pdfs  project-diagram.uml  record.md  replace_universal.ps1  report-template.md  report.md  res-dir-xml.xml  rust  uml-instr.md  unblock.sh  updatejar.sh  user-doc.html  user-doc.md  (+2 more)
.bloop/: course-description-automation-test.json  course-description-automation.json
.metals/: metals.mv.db  metals.trace.db
PV/: PV-meeting01-03.03.23.md  PV-meeting03-05.05.23.md  PV-meeting1-03.03.23.md  PV-meeting2.md  PV-meeting3-05.05.23.md  PV-meetings4-02-06.23.md
project/: Artifacts.scala  Dependencies.scala  build.sbt  plugins.sbt
report-diagrams/: guide-dutilisation-manuelFR.html  guide-dutilisation-manuelFR.md  report-template.md  report.html  report.md
res/: 11M020-desc.json  11X001-desc.json  12M040-desc.json  12X050-desc.json  13M016A-desc.json  14M252-desc.json  14M258-desc.json  14P017-desc.json  32B0132-desc.json  32H1044-desc.json  32H1461-desc.json  32H1464-desc.json  34L5050-desc.json  ALL_SP.json  D200025-desc.json  abbrev.tsv  all.json  all_sp_2022.json  ba-info_sp.json  diff-master-build.txt  ipa-22-desc.json  logging_config.yaml  ma-info_sp.json  out.json  shortcut-res.ps1  sp-73710.json  sp1.json  sp_all.json  study-plans.json  test-auto-desc-2022-11X001.md  test-auto-desc-2022-12M040.md  test-auto-desc.md  tmp.ps1
scala-uml/: tmp.ps1  uml-github-config.txt
src/main/rust/: .gitignore  Cargo.toml  Makefile  _path.display()  cargo.ps1  clean.ps1  embed_resources.exe.manifest  embed_resources.rc  logging_config.yaml  run.ps1  to_dl.txt  to_dl2.txt
src/main/rust/files/res/: desc-2022-12X014.md
src/main/rust/files/res/templates/: course-desc.css
src/main/rust/icons/: cda-icon.icns  toicns
src/main/rust/src/: .launcher.rs.rustfmt  Utils.rs  bootstrapper.rs  launcher.rs  lib.rs  main.rs  main2.rs  message_dialog.rs  net.rs  para_convert.rs  test.rs  test_exevp_out.rs  utils.rs  win_exec.rs  win_popup.rs
src/main/rust/src/exec/: nixexec.rs  winexec.rs
src/main/rust/src/test/: playgroundtest.rs  test.rs
src/main/rust/src/win_popup/: main.rs  native_win.rs
src/main/rust/templates/: template.html
templates/: 2ipa-desc.html  3ipa-desc.html  changestomake.md  cours-desc-test-content.html  course-desc-template-cntt.md  course-desc-template.html  desc-ipa.html  (+33 more)
(+445 files in other folders)
