[package]
name = "Course-Description-Automation"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Noah Munz <munz.no@gmail.com>"]
repository = "https://github.com/David-Kyrat/Course-Description-Automation"
description = "Application to automatically generate pdfs of course description from the database of the University of Geneva"


[dependencies]
log = "0.4.17"
log4rs = "1.2.0"
native-dialog = "0.6.3"
path-clean = "1.0.1"
rayon = "1.7.0"
url = "2.4.0"
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.28"
tokio = { version = "1.13.0", features = ["full"] }
lazy_static = "1.4.0"

# [[bin]]
# name = "Course-Description-Automation"
# path = "src/main.rs"
# test = false
# bench = false


[[bin]]
name = "installer"
path = "src/bootstrapper.rs"
test = false
bench = false

#[[bin]]
#name = "launcher"
#path = "src/launcher.rs"
#test = false
#bench = false

# [[bin]]
# name = "test"
# path = "src/test/test.rs"
# test = true
# bench = false
