[package]
name = "CDA"
version = "2.0.0"
edition = "2021"
license = "MIT"
authors = ["Noah Munz <munz.no@gmail.com>"]
repository = "https://github.com/David-Kyrat/Course-Description-Automation"
description = "Application to automatically generate pdfs of course description from the database of the University of Geneva"


[dependencies]
chrono = "0.4.26"
log = "0.4.17"
log4rs = "1.2.0"
native-dialog = "0.6.3"
path-clean = "1.0.1"
rayon = "1.7.0"


[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.15", features = ["kernel", "shell", "user", "ole", "oleaut"] }

# [[bin]]
# name = "Course-Description-Automation"
# path = "src/main.rs"
# test = false
# bench = false


#[[bin]]
#name = "installer"
#path = "src/bootstrapper.rs"
#test = false
#bench = false
#
#[[bin]]
#name = "para-convert"
#path = "src/para_convert.rs"
#test = false
#bench = false

# [[bin]]
# name = "test"
# path = "src/test/test.rs"
# test = true
# bench = false
